--- a/ProfileMatch.Web/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/ProfileMatch.Web/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -1,10 +1,10 @@
 ﻿@page
 @model ForgotPasswordConfirmation
 @{
-    ViewData["Title"] = "Forgot password confirmation";
+    ViewData["Title"] = @L["Forgot password confirmation"];
 }
 
 <h1>@ViewData["Title"]</h1>
 <p>
-    Please check your email to reset your password.
+    @L["Please check your email to reset your password."]
 </p>
