--- a/ProfileMatch.Web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/ProfileMatch.Web/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,8 +5,8 @@
 @model LoginModel
 @inject IStringLocalizer<LanguageService> L
 
-<body class="text-center" >
-    
+<body class="text-center">
+
     <div class="container d-flex p-3 mx-auto w-100 flex-column">
         <header class="mb-auto">
         </header>
@@ -39,13 +39,13 @@
     <div class="modal fade" id="Modal" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
-                
+
                 <div class="modal-body">
                     <form>
                         <div class="form-group row">
                             <label for="staticEmail" class="col-sm-2 col-form-label">@L["Email"]:</label>
                             <div class="col-sm-10">
-                                <input type="text" readonly class="form-control-plaintext" id="staticEmail" value="admin@profilematch.pl">
+                                <input type="text" readonly class="form-control-plaintext" id="staticEmail" value="info@profilematch.pl">
                             </div>
                         </div>
                         <br />
@@ -55,8 +55,6 @@
                                 <option>@L["1. Zapomniałeś loginu lub hasła"]</option>
                                 <option>@L["2. Nie posiadasz konta"]</option>
                                 <option>@L["3. Nie możesz się zalogować"]</option>
-                                <option>4. xxx</option>
-                                <option>5. xxx</option>
                             </select>
                             <br />
                         </div>
@@ -64,16 +62,19 @@
                             <label for="exampleFormControlTextarea1">@L["Opisz swój problem"]:</label>
                             <textarea class="message form-control" id="Message" rows="3"></textarea>
                         </div>
+                        <p>
+                        <a id="forgot-password" asp-page="./ForgotPassword">@L["Forgot your password?"]</a>
+                    </p>
                     </form>
                 </div>
 
                 <div class="modal-footer">
-                    
- 
- 
+
+
+
                     <button type="button" class="btn btn-warning btn-sm" data-bs-dismiss="modal">@L["Anuluj"]</button>
                     <button class="btn btn-primary btn-sm" type="submit" onclick="SendMail()">&nbsp&nbsp&nbsp @L["Wyślij"]&nbsp&nbsp&nbsp&nbsp</button>
-                   
+
                 </div>
             </div>
         </div>
@@ -82,10 +83,10 @@
         <p class="mt-5 mb-5 text-muted text-center">&copy; 2022 Karol Pluciński, Łukasz Pietrzak & Paweł Przytuła</p>
     </div>
 
-     <script src="~/js/SendMail.js"></script>
-    
+    <script src="~/js/SendMail.js"></script>
+
 </body>
- 
+
 
 
 
