--- a/ProfileMatch.Web/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/ProfileMatch.Web/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,6 +1,10 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using ProfileMatch.Web.Areas.Identity
 @using ProfileMatch.Web.Areas.Identity.Pages
+@inject IStringLocalizer<LanguageService> L
+@using ProfileMatch.Services
+@using Microsoft.AspNetCore.Localization
+@using Microsoft.Extensions.Localization
 @using ProfileMatch.Models.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, ProfileMatch
