--- a/ProfileMatch.Web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/ProfileMatch.Web/Areas/Identity/Pages/Account/Login.cshtml
@@ -14,8 +14,9 @@
     </div>
     <form class="form-signin" id="account" method="post">
         <div class="logo">
-            <img src="https://i.ibb.co/Gk1cvZK/logo.png" alt="logo" border="0">
+            <img src="\img\logonew.svg" alt="logo" border="0">
         </div>
+        <br />     
         <h1 class="h3 mb-3">@L["Proszę się zalogować"]</h1>
 
         <input type="email" id="Input.Email" autocomplete="current-email" class="form-control" placeholder="Email" asp-for="Input.Email" required autofocus>
