--- a/ProfileMatch.Web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/ProfileMatch.Web/Areas/Identity/Pages/Account/Login.cshtml
@@ -13,9 +13,7 @@
 
     </div>
     <form class="form-signin" id="account" method="post">
-        <div class="logo">
-            <img src="\img\logonew.svg" alt="logo" border="0">
-        </div>
+        <div class="logo"></div>
         <br />     
         <h1 class="h3 mb-3">@L["Proszę się zalogować"]</h1>
 
