--- a/ProfileMatch.Web/Pages/_Host.cshtml
+++ b/ProfileMatch.Web/Pages/_Host.cshtml
@@ -37,10 +37,6 @@
 
     <script src="_framework/blazor.server.js"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
-    <script>
-        window.prefersDarkMode = function () {
-            return window.matchMedia('(prefers-color-scheme: dark)').matches;
-        }
-    </script>
+    <script src="~/js/blazorTheme.js"></script>
 </body>
 </html>
