--- a/ProfileMatch.Components/_Imports.razor
+++ b/ProfileMatch.Components/_Imports.razor
@@ -5,7 +5,7 @@
 
 @using ProfileMatch.Components
 @using ProfileMatch.Services
-@using ProfileMatch.Contracts
+
 @using System.Net.Http
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
@@ -24,5 +24,5 @@
 @using Microsoft.Extensions.Localization
 @using System.Globalization
 @using Microsoft.AspNetCore.Localization
-@using System.IO;
+@using System.IO
 @using Microsoft.Extensions.Configuration
